--- a/css/style.css
+++ b/css/style.css
@@ -9,15 +9,14 @@ html {
 }
 
 body {
+  min-width: 375px;
   font-size: 1.4rem;
   line-height: 2.1rem;
   font-family: "Open Sans", sans-serif;
   color: hsl(243, 87%, 12%);
   background-color: #ffffff;
-  min-width: 375px;
-  width: 100%;
 }
-@media screen and (min-width: 600px) {
+@media screen and (min-width: 620px) {
   body {
     font-size: 1.6rem;
     line-height: 2.4rem;
@@ -30,7 +29,7 @@ H1 {
   font-family: "Open Sans", sans-serif;
   color: hsl(243, 87%, 12%);
 }
-@media screen and (min-width: 600px) {
+@media screen and (min-width: 620px) {
   H1 {
     font-size: 3.8rem;
     line-height: 5.9rem;
@@ -43,7 +42,7 @@ H2 {
   font-family: "Raleway", sans-serif;
   color: hsl(243, 87%, 12%);
 }
-@media screen and (min-width: 600px) {
+@media screen and (min-width: 620px) {
   H2 {
     font-size: 4rem;
     line-height: 4rem;
@@ -56,7 +55,7 @@ H3, h4, h5, h6 {
   font-family: "Raleway", sans-serif;
   color: hsl(243, 87%, 12%);
 }
-@media screen and (min-width: 600px) {
+@media screen and (min-width: 620px) {
   H3, h4, h5, h6 {
     font-size: 3.4rem;
     line-height: 3.4rem;
@@ -69,7 +68,7 @@ figure {
 }
 
 img {
-  width: 32rem;
+  width: 100%;
   height: auto;
 }
 
@@ -81,26 +80,513 @@ a {
   text-decoration: none;
 }
 
-body {
-  min-width: 32.8rem;
-  width: 32.8rem;
+.button {
+  width: 100%;
+  height: 4rem;
+  border-radius: 4px;
+  border: none;
+  color: #ffffff;
+  font-size: 1.4rem;
+  font-weight: bold;
+  font-family: "Raleway", sans-serif;
+}
+.button:hover {
+  background-color: #6B9BFF;
+  cursor: pointer;
+}
+
+.button__main {
+  background-color: hsl(224, 93%, 58%);
+  box-shadow: 0 0 12px hsl(0, 0%, 75%);
+}
+
+.form input {
+  width: 100%;
+  height: 4rem;
+  border-radius: 4px;
+  display: inline-block;
+  margin-block-start: 1.8rem;
+}
+.form input:first-of-type {
+  margin-block-start: 0rem;
+}
+.form__text {
+  padding: 1rem;
+  color: hsl(243, 87%, 12%);
+  border: solid 1px hsl(243, 87%, 12%);
+}
+.form__text::placeholder {
+  color: hsl(0, 0%, 75%);
+}
+
+.header {
+  width: 100%;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  display: flex;
+  min-width: 375px;
   margin: 0 auto;
   text-align: center;
-  flex-direction: column;
-  justify-content: "";
-  align-content: "";
-  display: flex;
-  flex-wrap: nowrap;
+  height: 7.1rem;
+  padding-inline: 2rem;
 }
-@media screen and (min-width: 600px) {
-  body {
+@media screen and (min-width: 620px) {
+  .header {
+    justify-content: space-between;
+  }
+}
+@media screen and (min-width: 1000px) {
+  .header {
+    flex-direction: row;
+  }
+}
+@media screen and (min-width: 620px) {
+  .header {
     width: 100%;
+  }
+}
+@media screen and (min-width: 1000px) {
+  .header {
     max-width: 128rem;
     text-align: left;
   }
 }
-@media screen and (min-width: 600px) {
+@media screen and (min-width: 620px) {
+  .header {
+    height: 18rem;
+  }
+}
+.header__logo {
+  width: 8.2rem;
+  height: 2.3rem;
+}
+.header__logo img {
+  width: 100%;
+}
+@media screen and (min-width: 620px) {
+  .header__logo {
+    width: 16.8rem;
+    height: 4.7rem;
+  }
+}
+.header__menu ul li {
+  display: inline-block;
+  margin-inline-start: 2.5rem;
+}
+@media screen and (min-width: 620px) {
+  .header__menu ul li {
+    margin-inline-start: 5.7rem;
+  }
+}
+.header__menu ul li a {
+  color: hsl(243, 87%, 12%);
+}
+
+footer {
+  background-color: hsl(243, 87%, 12%);
+}
+
+body {
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+}
+@media screen and (min-width: 620px) {
+  body {
+    justify-content: space-between;
+  }
+}
+@media screen and (min-width: 1000px) {
   body {
     flex-direction: column;
+  }
+}
+
+main {
+  width: 100%;
+}
+
+.section {
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  width: 100%;
+}
+@media screen and (min-width: 620px) {
+  .section {
+    justify-content: space-between;
+  }
+}
+@media screen and (min-width: 1000px) {
+  .section {
+    flex-direction: row;
+  }
+}
+.section__info {
+  order: 2;
+  max-width: 31rem;
+  width: 100%;
+  margin-block-start: 4rem;
+}
+@media screen and (min-width: 620px) {
+  .section__info {
+    max-width: 55rem;
+  }
+}
+@media screen and (min-width: 1000px) {
+  .section__info {
+    order: 1;
+    max-width: 100%;
+    width: 50%;
+    margin-block-start: 0rem;
+  }
+}
+.section__title {
+  margin-block-end: 2rem;
+}
+@media screen and (min-width: 620px) {
+  .section__title {
+    margin-block-end: 2.5rem;
+  }
+}
+.section__text {
+  margin-block-end: 2rem;
+}
+.section__media {
+  order: 1;
+  max-width: 30rem;
+  width: 100%;
+}
+@media screen and (min-width: 620px) {
+  .section__media {
+    width: 70%;
+    max-width: 63.6rem;
+    max-height: 47.9rem;
+  }
+}
+@media screen and (min-width: 1000px) {
+  .section__media {
+    order: 2;
+    width: 50%;
+    max-width: 63.6rem;
+    max-height: 47.9rem;
+  }
+}
+
+.wrapper {
+  background-image: url("../images/bg-curve-mobile.svg");
+  background-position: bottom;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+@media screen and (min-width: 620px) {
+  .wrapper {
+    background-image: url("../images/bg-curve-desktop.svg");
+  }
+}
+.wrapper--productive {
+  min-width: 375px;
+  margin: 0 auto;
+  text-align: center;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+}
+@media screen and (min-width: 620px) {
+  .wrapper--productive {
+    width: 100%;
+  }
+}
+@media screen and (min-width: 1000px) {
+  .wrapper--productive {
+    max-width: 128rem;
+    text-align: left;
+  }
+}
+@media screen and (min-width: 620px) {
+  .wrapper--productive {
+    justify-content: space-between;
+  }
+}
+@media screen and (min-width: 1000px) {
+  .wrapper--productive {
+    flex-direction: row;
+  }
+}
+
+.hero {
+  min-width: 375px;
+  margin: 0 auto;
+  text-align: center;
+  padding-block-end: 13.4rem;
+  padding-inline: 2rem;
+}
+@media screen and (min-width: 620px) {
+  .hero {
+    width: 100%;
+  }
+}
+@media screen and (min-width: 1000px) {
+  .hero {
+    max-width: 128rem;
+    text-align: left;
+  }
+}
+@media screen and (min-width: 620px) {
+  .hero {
+    padding-block-end: 25.7rem;
+  }
+}
+.hero .section__text {
+  font-size: 1.4rem;
+  line-height: 2.1rem;
+  font-weight: bold;
+}
+@media screen and (min-width: 1000px) {
+  .hero .section__text {
+    font-size: 1.9rem;
+    line-height: 2.4rem;
+    font-weight: bold;
+  }
+}
+@media screen and (min-width: 1000px) {
+  .hero .form input {
+    margin-inline-end: 1.8rem;
+  }
+  .hero .form__text {
+    width: 60%;
+  }
+  .hero .form__button {
+    width: 30%;
+  }
+}
+.hero .section__media {
+  margin-block-start: 8rem;
+}
+@media screen and (min-width: 1000px) {
+  .hero .section__media {
+    margin-block-start: 0rem;
+  }
+}
+
+.productive {
+  background-color: #F9F8FE;
+  width: 100%;
+  padding-inline: 2rem;
+  padding-block: 5rem 10rem;
+}
+@media screen and (min-width: 1000px) {
+  .productive {
+    padding-block: 10rem;
+  }
+}
+.productive .testimonial-card {
+  width: 28rem;
+  height: 17rem;
+  margin: 0 auto;
+  margin-block-start: 4rem;
+  background-color: #ffffff;
+  border-radius: 0.4rem;
+  padding: 1.8rem 2.6rem;
+  box-shadow: 0px 0px 10px hsl(0, 0%, 90%);
+  text-align: start;
+}
+.productive .testimonial-card__icon {
+  width: 1.1rem;
+  height: 1rem;
+}
+.productive .testimonial-card-text {
+  font-size: 1.1rem;
+  line-height: 1.8rem;
+  letter-spacing: -0.121px;
+}
+.productive .testimonial-card-author {
+  margin-block-start: 1.6rem;
+  display: flex;
+  align-items: center;
+}
+.productive .testimonial-card__img {
+  width: 2.4rem;
+  height: 2.4rem;
+  display: inline-block;
+}
+.productive .testimonial-card__img img {
+  border-radius: 50%;
+}
+.productive .testimonial-card-info {
+  display: inline-block;
+  color: hsl(238, 22%, 44%);
+  margin-inline-start: 0.8rem;
+}
+.productive .testimonial-card__name {
+  font-size: 0.9rem;
+  line-height: 0.9rem;
+  font-weight: bold;
+  font-family: "Raleway", sans-serif;
+  letter-spacing: 0.63px;
+  display: block;
+}
+.productive .testimonial-card__position {
+  font-size: 0.6rem;
+  line-height: 0.6rem;
+  font-family: "Open Sans", sans-serif;
+  display: block;
+}
+@media screen and (min-width: 620px) {
+  .productive .testimonial-card {
+    width: 35.6rem;
+    height: 21.8rem;
+    margin-block-start: 4.4rem;
+    border-radius: 0.6rem;
+    padding: 2rem 3rem;
+  }
+  .productive .testimonial-card__icon {
+    width: 1.8rem;
+    height: 1.3rem;
+  }
+  .productive .testimonial-card-text {
+    font-size: 1.4rem;
+    line-height: 2.3rem;
+  }
+  .productive .testimonial-card-author {
+    margin-block-start: 2.1rem;
+  }
+  .productive .testimonial-card__img {
+    width: 3.2rem;
+    height: 3.2rem;
+  }
+  .productive .testimonial-card__img img {
+    border-radius: 50%;
+  }
+  .productive .testimonial-card__name {
+    font-size: 1.1rem;
+    line-height: 1.1rem;
+  }
+  .productive .testimonial-card__position {
+    font-size: 0.8rem;
+    line-height: 0.8rem;
+  }
+}
+@media screen and (min-width: 1000px) {
+  .productive .testimonial-card {
+    margin: 0;
+    margin-block-start: 4.4rem;
+  }
+}
+@media screen and (min-width: 1000px) {
+  .productive .section__info {
+    width: 60%;
+  }
+}
+.productive__button {
+  color: hsl(170, 45%, 43%);
+  border-bottom: 1px solid hsl(170, 45%, 43%);
+  display: inline-block;
+  padding: 0.3rem;
+  font-size: 1.2rem;
+}
+@media screen and (min-width: 1000px) {
+  .productive__button {
+    font-size: 1.6rem;
+  }
+}
+.productive__button-icon {
+  display: inline-block;
+  margin-inline-start: 0.8rem;
+  margin-block-start: -0.2rem;
+  width: 1.6rem;
+  height: 1.6rem;
+  border-radius: 50%;
+  background: url("../images/icon-arrow.svg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.wrapper__subscribe {
+  background-color: hsl(238, 22%, 44%);
+  color: #ffffff;
+}
+
+.subscribe {
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  min-width: 375px;
+  margin: 0 auto;
+  text-align: center;
+  padding-block: 6rem 7rem;
+  text-align: center;
+}
+@media screen and (min-width: 620px) {
+  .subscribe {
+    justify-content: space-between;
+  }
+}
+@media screen and (min-width: 1000px) {
+  .subscribe {
+    flex-direction: row;
+  }
+}
+@media screen and (min-width: 620px) {
+  .subscribe {
+    width: 100%;
+  }
+}
+@media screen and (min-width: 1000px) {
+  .subscribe {
+    max-width: 128rem;
+    text-align: left;
+  }
+}
+.subscribe .section__info {
+  order: 1;
+  margin-block-start: 0;
+  gap: 2rem;
+}
+@media screen and (min-width: 620px) {
+  .subscribe .section__info {
+    width: 70%;
+  }
+}
+@media screen and (min-width: 1000px) {
+  .subscribe .section__info {
+    width: 100%;
+    max-width: 51.4rem;
+  }
+}
+.subscribe .section__form {
+  order: 2;
+  width: 100%;
+  max-width: 32rem;
+}
+.subscribe .section__form .button__main {
+  box-shadow: 0 0 3px hsl(243, 97%, 12%);
+}
+@media screen and (min-width: 620px) {
+  .subscribe .section__form {
+    width: 100%;
+    max-width: 55rem;
+  }
+  .subscribe .section__form .button__main {
+    width: 20rem;
+  }
+}
+@media screen and (min-width: 1000px) {
+  .subscribe .section__form {
+    max-width: 47.8rem;
+  }
+}
+.subscribe .section__title {
+  color: #ffffff;
+}
+@media screen and (min-width: 620px) {
+  .subscribe {
+    padding-inline: 10rem 8rem;
   }
 }
