--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -50,22 +50,17 @@
     }
 
     &__icon-social {
-        display: inline-block;
+        display:inline-block;
+        text-align: center;
         width: 2.9rem;
         height: 2.9rem;
+        border: 1px solid white;
+        padding: 0.2rem;
         border-radius: 50%;
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: contain;
-
 
         @media screen and (min-width:$Query-computer) {
             width: 3.2rem;
             height: 3.2rem;
-        }
-
-        &-facebook {
-            background-image: url('.../images/favicon-32x32.png');
         }
     }
 }
